QuickOpen: select first item on update

BUG: 407103

Differential Revision: 21405